@@ -13,7 +13,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>369</width>
+            <width>366</width>
             <height>192</height>
         </rect>
     </property>
@@ -66,6 +66,10 @@
                         <name>text</name>
                         <string>&amp;Restore</string>
                     </property>
+                    <property stdset="1">
+                        <name>autoDefault</name>
+                        <bool>false</bool>
+                    </property>
                 </widget>
                 <spacer>
                     <property>
@@ -98,6 +102,10 @@
                         <name>text</name>
                         <string>&amp;Save</string>
                     </property>
+                    <property stdset="1">
+                        <name>autoDefault</name>
+                        <bool>false</bool>
+                    </property>
                 </widget>
                 <widget>
                     <class>QPushButton</class>
@@ -109,6 +117,10 @@
                         <name>text</name>
                         <string>&amp;Apply</string>
                     </property>
+                    <property stdset="1">
+                        <name>autoDefault</name>
+                        <bool>false</bool>
+                    </property>
                 </widget>
                 <widget>
                     <class>QPushButton</class>
@@ -119,6 +131,10 @@
                     <property stdset="1">
                         <name>text</name>
                         <string>&amp;Close</string>
+                    </property>
+                    <property stdset="1">
+                        <name>autoDefault</name>
+                        <bool>false</bool>
                     </property>
                 </widget>
             </hbox>
